# LiverSurgerySim

./: CMakeLists.txt  CMakePresets.json  build_appimage.sh  build_windows.bat  vcpkg.json
.github/workflows/: build.yml
build_appimage/AppDir/: .DirIcon  AppRun  LiverSurgerySim.desktop
model/: GB_highRes_mesh.txt  GB_lowRes_mesh.txt  liver_highRes_mesh.txt  liver_lowRes_mesh.txt  portal_highRes_mesh.txt  portal_lowRes_mesh.txt  tumor_highRes_mesh.txt  tumor_lowRes_mesh.txt  vein_highRes_mesh.txt  vein_lowRes_mesh.txt
squashfs-root/: AppRun  LiverSurgerySim.desktop
squashfs-root/model/: GB_highRes_mesh.txt  GB_lowRes_mesh.txt  Icosphre4.txt  cube16_tetrahedral_mesh.txt  cube256_tetrahedral_mesh.txt  cube625_tetrahedral_mesh.txt  cubeG1_tetrahedral_mesh.txt  cubelongG10_tetrahedral_mesh.txt  cubelongG12_tetrahedral_mesh.txt  cubelongG12dot_tetrahedral_mesh.txt  cubelongG16_tetrahedral_mesh.txt  cubelongG30_tetrahedral_mesh.txt  cubelong_tetrahedral_mesh.txt  cut2liver_tetrahedral_mesh.txt  cut3liver_tetrahedral_mesh.txt  cutcubelongG30_tetrahedral_mesh.txt  cutliverG20_tetrahedral_mesh.txt  cutliverG50_tetrahedral_mesh.txt  cutliver_tetrahedral_mesh.txt  descutliverG50_tetrahedral_mesh.txt  descutliverG50_tetrahedral_mesh_decimated.txt  export_gb_tetrahedral_mesh.txt  export_portal_tetrahedral_mesh.txt  export_vein_tetrahedral_mesh.txt  export_vein_tetrahedral_mesh_tetra.tet  gb_highRes_mesh.txt  gb_lowRes_mesh.txt  highRestetmesh_gb.txt  highRestetmesh_liver.txt  highRestetmesh_portal.txt  highRestetmesh_res.txt  highRestetmesh_tumor.txt  highRestetmesh_vein.txt  liver5_tetrahedral_mesh.txt  liver6_tetrahedral_mesh.txt  liverG10_tetrahedral_mesh.txt  liverG16_tetrahedral_mesh.txt  liverG20_tetrahedral_mesh.txt  liverG30_tetrahedral_mesh.txt  liverG50_tetrahedral_mesh.txt  (+49 more)
squashfs-root/shader/: basicDuo.frag
squashfs-root/shaderGPUDuo/: basicDuo.frag
squashfs-root/usr/lib/: libglfw.so.3
src/: CRSlicerCrossSec.cpp  CRSlicerCrossSec.h  CentVoxTetrahedralizerHybrid.cpp  CentVoxTetrahedralizerHybrid.h  CutSegmentManager.cpp  CutSegmentManager.h  CutterMeshManager.cpp  CutterMeshManager.h  FullSphereCamera.h  GrabberGPUDuo.cpp  GrabberGPUDuo.h  MeshCuttingGPUDuo.h  MeshDataTypes.cpp  MeshDataTypes.h  RayCastGPUDuo.cpp  RayCastGPUDuo.h  ShaderProgram.cpp  ShaderProgram.h  SoftBodyCutManager.h  SoftBodyGPUDuo.cpp  SoftBodyGPUDuo.h  SoftBodyParallelSolver.cpp  SoftBodyParallelSolver.h  SphereDeformGPUDuo.cpp  SphereDeformGPUDuo.h  TextRenderer.cpp  TextRenderer.h  VoronoiPathSegmentation.cpp  VoronoiPathSegmentation.h  VoxelSkeletonSegmentation.cpp  VoxelSkeletonSegmentation.h  mCutMesh.h  main.cpp  simple_multi_obj_processor.h
